# lu-estilo-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: auth.py  clients.py  orders.py  products.py
migrations/: env.py
migrations/versions/: 09d06f58bc32_create_initial_tables_of_the_project.py  42585ca339a0_refactor_item_model.py  5ebd993fac8b_refactor_item_model_with_default_order_.py  e27a07668d5a_create_order_date_field_in_order_model.py  e3c248cf54f9_refactor_item_model_with_default_order_.py
tests/: conftest.py  test_auth.py  test_clients.py  test_main.py  test_models.py  test_orders.py  test_products.py
